Fix staging area too low

--- a/app/assets/stylesheets/datepicker.css
+++ b/app/assets/stylesheets/datepicker.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
-  height: 600px;
+  height: 579px;
   margin-left: 25px;
 }
 
